mydeploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
   name: mydeployments
spec:
   replicas: 1
   selector:      # tells the controller which pods to watch/belong to
    matchLabels:
     name: deployment
   template:
     metadata:
       name: testpod1
       labels:
         name: deployment
     spec:
      containers:
            - name: c00
              image: 738649861708.dkr.ecr.us-east-1.amazonaws.com/getkart/myrepo:$BUILD_ID
              ports:
               - containerPort: 80
